<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/ic_nav_movies"
        android:title="@string/nav_movies" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/downloadFragment"
        android:icon="@drawable/ic_nav_download"
        android:title="@string/nav_download" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
